@@ -31,7 +31,7 @@ PROJECT_NAME           = "Arduino Tlc5940 Library"
 # This could be handy for archiving the generated documentation or
 # if some version control system is used.
 
-PROJECT_NUMBER         = "r11 - 2009-03-05"
+PROJECT_NUMBER         = "r12 - 2009-04-19"
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute)
 # base path where the generated documentation will be put.
